upload payslip and idcard in loan application

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,1 +1,6 @@
 JWT_SECRET: '#kjk92232kndssddy[-21o1-oe[01ueuhlelqnds&$^^$63183242'
+CLOUDINARY_CLOUDNAME: 'dzwafstu3'
+CLOUDINARY_APIKEY: '951584143551435'
+CLOUDINARY_API_SECRET: 'v46DLhkmQqanSNPMg6Fm1Q5diPQ'
+CLOUDINARY_SECURE: true
+CLOUDINARY_CDN_SUBDOMAIN: true
