password reset, passport upload and email

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,6 +1,20 @@
-JWT_SECRET: '#kjk92232kndssddy[-21o1-oe[01ueuhlelqnds&$^^$63183242'
-CLOUDINARY_CLOUDNAME: 'dzwafstu3'
-CLOUDINARY_APIKEY: '951584143551435'
-CLOUDINARY_API_SECRET: 'v46DLhkmQqanSNPMg6Fm1Q5diPQ'
+# Add configuration values here, as shown below.
+#
+# pusher_app_id: "2954"
+# pusher_key: 7381a978f7dd7f9a1117
+# pusher_secret: abdc3b896a0ffb85d373
+# stripe_api_key: sk_test_2J0l093xOyW72XUYJHE4Dv2r
+# stripe_publishable_key: pk_test_ro9jV5SNwGb1yYlQfzG17LHK
+#
+# production:
+#   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
+#   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
+
+CLOUDINARY_CLOUD_NAME: "dzwafstu3"
+CLOUDINARY_API_KEY: "951584143551435"
+CLOUDINARY_API_SECRET: "v46DLhkmQqanSNPMg6Fm1Q5diPQ"
 CLOUDINARY_SECURE: true
 CLOUDINARY_CDN_SUBDOMAIN: true
+DEFAULT_EMAIL: "anuonifade@gmail.com"
+EMAIL_PASSWORD: "magnifico@2199"
+URL: "http://localhost:3000"
